--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "babel-preset-react-app": "^10.0.1",
+    "bootstrap-icons": "^1.11.2",
+    "ng2-currency-mask": "^13.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.3.1",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.0",
